autofill increment needs a bit more tolerance, fdo#37424